overflow/scroll fix for preview

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@ body {
     background-color: $offLight;
     color: $dark;
     font-family: $sans;
+    overflow: hidden;
 }
 
 textarea,
